# pyceptron

./: .gitignore  README.md  pyproject.toml
perceptron/: __init__.py
perceptron/core/: __init__.py  activation.py
perceptron/core/abs/: perceptron.py
perceptron/core/factivations/: __init__.py  abs.py  base.py  elu.py  leaky_relu.py  linear.py  relu.py  sigmoid.py  tanh.py
perceptron/core/objects/: layer.py  perceptron.py  perceptrongradient.py  sequential.py
perceptron/core/objects/base/: base.py
perceptron/core/objects/perceptrons/: classic.py  gradient.py
perceptron/utils/: __init__.py
perceptron/utils/analyzer/: main.py
perceptron/utils/generators/: base.py
perceptrons/: perceptron.json
pyceptron/core/: __init__.py
tests/lib_modular/: perceptron.py  perceptronabc.py
tests/lib_modular/base/: base.py  perceptron_predict.py  perceptron_train.py
tests/monocapa/: lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py  lab9.py
tests/multicapa/: lab1.py  lab2.py  lab3.py
tests/other/: lab1.py
